Fix wrong color container bounding rect in Firefox

--- a/components/ColorTool/Color/styles.module.scss
+++ b/components/ColorTool/Color/styles.module.scss
@@ -2,7 +2,7 @@
 
 .color {
 	&-container {
-		padding-left: 1em;
+		margin-left: 1em;
 	}
 
 	@include desktop {
